--- a/public/test.html
+++ b/public/test.html
@@ -85,10 +85,11 @@
   <h3 id="attr-picker-title" style="margin:0 0 8px;">选择应用的属性值</h3>
   <div id="attr-picker-hint" style="color:#666; margin-bottom:8px;"></div>
   
-  <label style="display:block; margin-bottom:8px;">
-    <span id="attr-picker-attrname">属性值</span>：
-    <select id="attr-picker-options" multiple></select>
-  </label>
+<div style="margin-bottom:8px;">
+  <div id="attr-picker-attrname" style="margin-bottom:6px; color:#333;">属性值</div>
+  <select id="attr-picker-options" multiple></select>
+</div>
+
 
   <!-- 新增：全选 / 全不选按钮 -->
   <div style="margin:6px 0 8px;">
