--- a/public/test.html
+++ b/public/test.html
@@ -98,10 +98,11 @@
   </div>
   <!-- /新增 -->
 
-  <label style="display:block; margin-bottom:8px;">
-    属性值：
-    <select id="attr-picker-options" multiple></select>
-  </label>
+<div style="margin-bottom:8px;">
+  <div id="attr-picker-attrname" style="margin-bottom:6px; color:#333;">属性值</div>
+  <select id="attr-picker-options" multiple></select>
+</div>
+
 
   <div style="margin-top:10px; text-align:right;">
     <!-- 左“确定”右“取消” -->
