--- a/public/viewer.html
+++ b/public/viewer.html
@@ -1197,5 +1197,6 @@ window.confirmStyle      = confirmStyle;
 window.closeStyleWindow  = closeStyleWindow;
 
 </script>
+  <script type="module" src="./src/app.js"></script>
 </body>
 </html>
