--- a/public/viewer.html
+++ b/public/viewer.html
@@ -349,65 +349,100 @@ function applyFilters() { filterLogic = 'and'; updateTimelineByFilter(); }
 function applyFiltersOr() { filterLogic = 'or'; updateTimelineByFilter(); }
 
 /* -------- 获取事件并渲染（关键替换区） -------- */
-  window.addEventListener('style:ready', () => {
-fetch(ENDPOINT)
-  .then(res => res.json())
-  .then(data => {
-    originalItems = data.map((event, i) => {
-      const contentText = event.content ?? event.Title ?? '(无标题)';
-      const Start = event.Start ?? event.start ?? '';
-      const End   = event.End   ?? event.end   ?? '';
-      const blob  = (event.title ?? '').toString();
+window.addEventListener('style:ready', () => {
+  fetch(ENDPOINT)
+    .then(res => res.json())
+    .then(data => {
+      originalItems = data.map((event, i) => {
+        const contentText = event.content ?? event.Title ?? '(无标题)';
+        const Start = event.Start ?? event.start ?? '';
+        const End   = event.End   ?? event.end   ?? '';
+        const blob  = (event.title ?? '').toString();
 
-      const pick = (label) => {
-        if (!blob) return '';
-        const m = new RegExp(label + '：([^\\n]+)').exec(blob);
-        return m ? m[1].trim() : '';
-      };
+        const pick = (label) => {
+          if (!blob) return '';
+          const m = new RegExp(label + '：([^\\n]+)').exec(blob);
+          return m ? m[1].trim() : '';
+        };
 
-      const EventType       = event.EventType       ?? event.eventType       ?? pick('事件类型');
-      const Region          = event.Region          ?? event.region          ?? pick('地区');
-      const Platform        = event.Platform        ?? event.platform        ?? pick('平台类型');
-      const Company         = event.Company         ?? event.company         ?? pick('公司');
-      const Status          = event.Status          ?? event.status          ?? pick('状态');
-      const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
+        const EventType       = event.EventType       ?? event.eventType       ?? pick('事件类型');
+        const Region          = event.Region          ?? event.region          ?? pick('地区');
+        const Platform        = event.Platform        ?? event.platform        ?? pick('平台类型');
+        const Company         = event.Company         ?? event.company         ?? pick('公司');
+        const Status          = event.Status          ?? event.status          ?? pick('状态');
+        const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
 
-      const tooltipHtml = blob
-        ? blob.replace(/\n/g, '<br>')
-        : [
-            `事件名称：${contentText}`,
-            `事件类型：${EventType || ''}`,
-            `时间：${Start || ''}${End ? ' ~ ' + End : ''}`,
-            `状态：${Status || ''}`,
-            `地区：${Region || ''}`,
-            `平台类型：${Platform || ''}`,
-            `主机类型：${ConsolePlatform || ''}`,
-            `公司：${Company || ''}`
-          ].join('<br>');
+        // ✅ 新增：Tag（支持数组/逗号分隔/为空）
+        const TagRaw = event.Tag ?? event.tag ?? pick('标签');
+        const Tag = Array.isArray(TagRaw)
+          ? TagRaw
+          : String(TagRaw || '')
+              .split(',')
+              .map(s => s.trim())
+              .filter(Boolean);
 
-      return {
-        id: event.id || `auto-${i + 1}`,
-        content: contentText,
-        start: Start,
-        end: End || undefined,
-        title: tooltipHtml,
-        EventType, Region, Platform, Company, Status, ConsolePlatform
-      };
+        const tooltipHtml = blob
+          ? blob.replace(/\n/g, '<br>')
+          : [
+              `事件名称：${contentText}`,
+              `事件类型：${EventType || ''}`,
+              `时间：${Start || ''}${End ? ' ~ ' + End : ''}`,
+              `状态：${Status || ''}`,
+              `地区：${Region || ''}`,
+              `平台类型：${Platform || ''}`,
+              `主机类型：${ConsolePlatform || ''}`,
+              `公司：${Company || ''}`
+            ].join('<br>');
+
+        return {
+          id: event.id || `auto-${i + 1}`,
+          content: contentText,
+          start: Start,
+          end: End || undefined,
+          title: tooltipHtml, // vis 会用这个作为 tooltip
+          EventType, Region, Platform, Company, Status, ConsolePlatform,
+          Tag // ← 提供给 template 打 data-Tag
+        };
+      });
+
+      // ✅ 初始化 Timeline，加入 template 钩子
+      timeline = new vis.Timeline(
+        document.getElementById("timeline"),
+        originalItems,
+        {
+          locale: "zh-cn",
+          editable: false,
+          margin: { item: 10, axis: 50 },
+          orientation: { axis: 'bottom', item: 'bottom' },
+          tooltip: { followMouse: true, overflowMethod: 'flip' },
+          verticalScroll: true,
+          zoomKey: "ctrlKey",
+          stack: true,
+
+          // ⭐ 关键：每条事件渲染时，为容器加 data-* 与类名，并返回内容 DOM
+          template: (item, element) => {
+            if (element && window.__styleEngine) {
+              window.__styleEngine.attachEventDataAttrs(element, item); // data-EventType / data-Tag 等
+              element.classList.add('event'); // 统一锚点：.vis-item.event
+            }
+            const root = document.createElement('div');
+            const h4 = document.createElement('h4');
+            h4.className = 'event-title';
+            h4.textContent = item.content || '(无标题)';
+            root.appendChild(h4);
+            return root; // 也可以 return 字符串 HTML
+          }
+        }
+      );
+
+      // ✅ 初始化后立即应用当前样式（没有配置也不会报错）
+      const state = window.__styleState?.getStyleState?.() || { version:1, boundTypes:{}, rules:{} };
+      window.__styleEngine?.applyStyleState(state, {
+        selectorBase: '.vis-item.event',
+        titleSelector: '.event-title'
+      });
     });
-
-    // ✅ 把 Timeline 初始化放在 then 内部
-    timeline = new vis.Timeline(document.getElementById("timeline"), originalItems, {
-      locale: "zh-cn",
-      editable: false,
-      margin: { item: 10, axis: 50 },
-      orientation: { axis: 'bottom', item: 'bottom' },
-      tooltip: { followMouse: true, overflowMethod: 'flip' },
-      verticalScroll: true,
-      zoomKey: "ctrlKey",
-      stack: true
-    });
-  }); 
-      });// ← 正确关闭 then(data => { ... })
+});// ← 正确关闭 then(data => { ... })
 
 /* -------- 获取下拉选项 -------- */
 fetch(ENDPOINT + '?action=options')
