--- a/public/viewer.html
+++ b/public/viewer.html
@@ -420,27 +420,33 @@ window.addEventListener('style:ready', () => {
           stack: true,
 
           // ⭐ 关键：每条事件渲染时，为容器加 data-* 与类名，并返回内容 DOM
-          template: (item, element) => {
-            if (element && window.__styleEngine) {
-              window.__styleEngine.attachEventDataAttrs(element, item); // data-EventType / data-Tag 等
-              element.classList.add('event'); // 统一锚点：.vis-item.event
-            }
-            const root = document.createElement('div');
-            const h4 = document.createElement('h4');
-            h4.className = 'event-title';
-            h4.textContent = item.content || '(无标题)';
-            root.appendChild(h4);
-            return root; // 也可以 return 字符串 HTML
-          }
+template: (item, element) => {
+  // ✅ 找到真正的外层容器 .vis-item（有些版本传进来的是 .vis-item-content）
+  const host = element?.closest?.('.vis-item') || element;
+  if (host && window.__styleEngine) {
+    window.__styleEngine.attachEventDataAttrs(host, item); // 在 .vis-item 上打 data-*
+    host.classList.add('event');                            // .vis-item.event
+  }
+
+  // 你的内容区保持不变
+  const root = document.createElement('div');
+  const h4 = document.createElement('h4');
+  h4.className = 'event-title';
+  h4.textContent = item.content || '(无标题)';
+  root.appendChild(h4);
+  return root;
+}
+
         }
       );
 
       // ✅ 初始化后立即应用当前样式（没有配置也不会报错）
       const state = window.__styleState?.getStyleState?.() || { version:1, boundTypes:{}, rules:{} };
-      window.__styleEngine?.applyStyleState(state, {
-        selectorBase: '.vis-item.event',
-        titleSelector: '.event-title'
-      });
+window.__styleEngine?.applyStyleState(state, {
+  selectorBase: '.vis-item.event, .vis-item-content.event',  // ✅ 放宽
+  titleSelector: '.event-title'
+});
+
     });
 });// ← 正确关闭 then(data => { ... })
 
